infra/kubernetes/base/ingress/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  labels:
    app.kubernetes.io/part-of: bank-mall
spec:
  controller: k8s.io/ingress-nginx
