infra/kubernetes/base/ingress/tempo-external-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempo-ui
  namespace: bank-mall
spec:
  type: ExternalName
  externalName: tempo-query.tempo.svc.cluster.local
  ports:
  - port: 16686
    targetPort: 16686
